--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,9 @@
 <html>
+    <head>
+        <!-- Include Bootstrap CSS and JavaScript -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+    </head>
 <body>
     <div class="login">
        <h1>Diamond Prediction</h1>
